# nlp-clients

./: CHANGELOG.md  README.md  nlp-clients.sln
csharp/: .gitignore  README.md
csharp/NlpClient/: NlpClient.csproj
csharp/NlpClient.Examples/: NlpClient.Examples.csproj  Program.cs
csharp/NlpClient/Protos/: intents.proto  nlp_server.proto  projects.proto
csharp/NlpClient/Services/: AuthInterceptor.cs  NlpClient.cs  NlpClientOptions.cs
node/: README.md  package-lock.json  package.json
node/examples/: content.ts  functions.ts  intents.ts  process.ts  projects.ts  runFunctions.ts  scoreLimits.ts
node/src/: index.ts
protos/: intents.proto  nlp_server.proto  projects.proto
python/: CONTRIBUTING.md  README.md  proto2Python.sh
python/examples/: content.py  functions.py  intents.py  projects.py  run_functions.py  scoreLimits.py  utils.py
python/src/aristech_nlp_client/: client.py
python/src/aristech_nlp_client/proto/: intents_pb2.py  intents_pb2.pyi  intents_pb2_grpc.py  nlp_server_pb2.py  nlp_server_pb2_grpc.py  projects_pb2.py  projects_pb2_grpc.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: content.rs  functions.rs  intents.rs  process.rs  projects.rs  runFunctions.rs  scoreLimits.rs
rust/examples/utils/: mod.rs
rust/protos/: intents.proto  nlp_server.proto  projects.proto
rust/src/: lib.rs
