[package]
name = "aristech-nlp-client"
description = "A Rust client library for the Aristech Natrual Language Processing API"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/aristech-de/nlp-clients"
keywords = ["nlp", "real-time", "streaming", "client-library"]
homepage = "https://github.com/aristech-de/nlp-clients/blob/main/rust/README.md"
authors = ["Martin Mende"]
license = "MIT"
categories = ["api-bindings"]

[dependencies]
tonic = { version = "0.13.0", features = [
  "tls-ring",
  "tls-native-roots",
  "gzip",
] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
prost = "0.13.5"
prost-types = "0.13.5"

[dev-dependencies]
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.13.0"

[[example]]
name = "functions"
path = "examples/functions.rs"

[[example]]
name = "process"
path = "examples/process.rs"

[[example]]
name = "projects"
path = "examples/projects.rs"

[[example]]
name = "intents"
path = "examples/intents.rs"

[[example]]
name = "scoreLimits"

[[example]]
name = "content"
path = "examples/content.rs"
